# cbm-mentoring-app

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.claude/agents/: backend-developer.md  code-reviewer.md  frontend-developer.md  qa-engineer.md  requirements-analyst.md  solution-architect.md  ux-designer.md
.claude/skills/database-api-standards/: SKILL.md
.claude/skills/design-doc-standards/: SKILL.md
.claude/skills/spec-authoring/: SKILL.md
.claude/skills/ui-standards/: SKILL.md
.claude/skills/webapp-standards/: SKILL.md
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml
docs/: coding-standards-discussion.md  database-api-standards-discussion.md  domain-brief.md  mentor-requirements-interview-2026-07-04.md  pipeline-log.md  pipeline-protocol.md  requirements-capture-2026-07-03.md  ui-standards-discussion.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: journeys.spec.ts
frontend/src/: app.tsx  main.tsx  session.ts  shell.css
frontend/src/api/: envelope.test.ts  envelope.ts  payloads.ts  schema.d.ts  session.ts  useEnvelope.ts
frontend/src/auth/: failure.test.ts  failure.ts  payloads.ts  screen-form.tsx  session-boundary.tsx  sign-in.tsx
frontend/src/forms/: create-form.test.tsx  create-form.tsx  edit-form.test.tsx  edit-form.tsx  field-edit-window.test.tsx  field-edit-window.tsx  lookup-control.test.tsx  lookup-control.tsx  smart-input.test.tsx
frontend/src/grid/: format.test.ts  format.ts  formatting.test.ts  formatting.ts  grid-panel.test.tsx  grid-panel.tsx  model.test.ts  model.ts  payloads.ts  preview-seam.tsx
frontend/src/mentoring/: actions.ts  compose-email.test.tsx  compose-email.tsx  compose-model.ts  engagement-preview.tsx  lifecycle-dialog.test.tsx  lifecycle-dialog.tsx  payloads.ts  prep-model.test.ts  prep-model.ts  prep-surface.tsx  rich-text.tsx  rollup.test.ts  rollup.ts  schedule-session.tsx  session-detail.test.tsx  session-detail.tsx  share-resource.tsx
frontend/src/panels/: home.tsx
frontend/src/shell/: banner.tsx  (+18 more)
prompts/: conformance-session.md  eng-004-kickoff.md  invitee-attendee-modeling-session.md  rel004-restart-session.md  ui-prototype-session.md  ui-standards-session-2.md
prototype/: app.js  data.js  index.html  styles.css
src/mentorapp/: __init__.py  main.py  observability.py
tests/: conftest.py  e2e_harness.py  identity_stub.py  test_access_areas.py  test_access_grants_store.py  test_access_help.py  test_access_lookup_grants.py  test_access_lookup_permissions.py  test_access_mentoring.py  test_access_processes.py  test_access_stored_auth.py  test_access_verification.py  test_access_view_enforcement.py  test_access_views.py  test_access_workprocess.py  test_api_admin_messages.py  test_api_auth.py  test_api_auth_screens.py  test_api_auth_wiring.py  test_api_crm_writes.py  test_api_edit_safety.py  test_api_envelope.py  test_api_field_edit.py  test_api_form_input.py  test_api_form_input_router.py  test_api_form_validation.py  test_api_form_validation_settings.py  test_api_grid_surface.py  test_api_grids_router.py  test_api_help.py  test_api_home.py  test_api_leadership.py  test_api_lookup_suggestions.py  test_api_mentoring.py  test_api_outage.py  test_api_panels.py  test_api_preferences.py  test_api_process_guarantees.py  test_api_processes.py  test_api_record_create.py  (+57 more)
(+142 files in other folders)
