[project]
name = "mentorapp"
version = "0.1.0"
description = "CBM Mentoring Application — mentor-facing web app over the CBM CRM system of record (ENG-004)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    # Adopted for WTK-125/WTK-126 (Governed-By: PI-008): the data-model standard
    # requires relational models with dialect-aware types (JSONB on Postgres) and
    # future Alembic migrations; SQLAlchemy 2.x is the boring incumbent ORM.
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mentorapp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 96
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
